k8s/apps/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: petbro
spec:
  selector:
    app: authservice
  ports:
    - port: 8080
      targetPort: 8080
